--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "A Notes app for all your day-to-day activities",
   "main": "src/app.js",
-  "scripts": {},
+  "scripts": {
+    "prestart": "npx eslint .",
+    "start": "node .",
+    "test": "npx nodemon"
+  },
   "author": {
     "email": "chiranthan568@gmail.com",
     "name": "Chiranthan Bharadwaj R"
@@ -16,8 +20,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.22.0",
     "mongoose": "^5.12.2",
-    "eslint": "^7.22.0"
+    "nodemon": "^2.0.7"
   },
   "engines": {
     "npm": ">=6.0.0",
@@ -26,5 +31,117 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/WickedWizard3588/Encrypted-Notes.git"
+  },
+  "bugs": {
+    "email": "chiranthan568@gmail.com",
+    "url": "https://github.com/WickedWizard3588/Encrypted-Notes/issues"
+  },
+  "homepage": "https://github.com/WickedWizard3588/Encrypted-Notes",
+  "eslintConfig": {
+    "extends": "eslint:recommended",
+    "env": {
+      "node": true,
+      "es6": true
+    },
+    "parserOptions": {
+      "ecmaVersion": 2021
+    },
+    "rules": {
+      "brace-style": [
+        "error",
+        "1tbs",
+        {
+          "allowSingleLine": true
+        }
+      ],
+      "comma-dangle": [
+        "error",
+        "always-multiline"
+      ],
+      "comma-spacing": "error",
+      "comma-style": "error",
+      "curly": [
+        "error",
+        "multi",
+        "consistent"
+      ],
+      "dot-location": [
+        "error",
+        "property"
+      ],
+      "handle-callback-err": "off",
+      "indent": [
+        "off",
+        "tab"
+      ],
+      "max-nested-callbacks": [
+        "error",
+        {
+          "max": 4
+        }
+      ],
+      "max-statements-per-line": [
+        "error",
+        {
+          "max": 2
+        }
+      ],
+      "no-console": "off",
+      "no-empty-function": "error",
+      "no-floating-decimal": "error",
+      "no-inline-comments": "off",
+      "no-lonely-if": "error",
+      "no-multi-spaces": "error",
+      "no-multiple-empty-lines": [
+        "error",
+        {
+          "max": 2,
+          "maxEOF": 1,
+          "maxBOF": 0
+        }
+      ],
+      "no-shadow": [
+        "error",
+        {
+          "allow": [
+            "err",
+            "resolve",
+            "reject"
+          ]
+        }
+      ],
+      "no-trailing-spaces": [
+        "error"
+      ],
+      "no-var": "error",
+      "object-curly-spacing": [
+        "error",
+        "always"
+      ],
+      "prefer-const": "error",
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "semi": [
+        "error",
+        "always"
+      ],
+      "space-before-blocks": "error",
+      "space-before-function-paren": [
+        "error",
+        {
+          "anonymous": "never",
+          "named": "never",
+          "asyncArrow": "always"
+        }
+      ],
+      "require-await": "error",
+      "space-in-parens": "error",
+      "space-infix-ops": "error",
+      "space-unary-ops": "error",
+      "spaced-comment": "error",
+      "yoda": "error"
+    }
   }
 }
